--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.mmht_my_mini_home_training">
     <!-- 만보계 -->
-    <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION"/>
+    <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -14,9 +15,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MMHT_myminihometraining"
         tools:targetApi="31">
+        <activity
+            android:name=".home.CameraActivity"
+            android:exported="false" />
+
         <meta-data
             android:name="com.google.android.geo.AIzaSyD9_DQaEqbvqv2XlYwKr2bxj1UwagFFgio"
             android:value="AIzaSyD9_DQaEqbvqv2XlYwKr2bxj1UwagFFgio" />
+
         <activity
             android:name=".home.CalendarActivity"
             android:exported="false" />
